add footer and anchors

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,12 @@
               умения. Приятного просмотра.
             </div>
             <div class="profile__button">
-              <a href="" class="profile__btn-portfolio btn">View Portfolio</a>
+              <a
+                href="#portfolio"
+                id="anchor"
+                class="profile__btn-portfolio btn"
+                >View Portfolio</a
+              >
               <a
                 href="https://docs.google.com/document/d/1a5ziS6U9SThr71jdknDRDF8wADnPb_fssJVqsIWKW6E/edit?usp=sharing"
                 class="profile__btn-resume btn"
@@ -199,7 +204,7 @@
         </div>
       </div>
 
-      <div class="my-portfolio">
+      <div class="my-portfolio" id="portfolio">
         <h2 class="my-portfolio__title title">
           Моё портфолио
         </h2>
@@ -288,6 +293,31 @@
         </div>
       </div>
     </div>
+
+    <footer class="end-portfolio">
+      <div class="container">
+        <div class="end-portfolio__copyrite">
+          Спасибо за просмотр
+          <svg
+            class="svg-inline--fa fa-heart fa-w-16 icon-footer"
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fas"
+            data-icon="heart"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"
+            data-fa-i2svg=""
+          >
+            <path
+              fill="currentColor"
+              d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+            ></path>
+          </svg>
+          для меня это очень важно !
+        </div>
+      </div>
+    </footer>
 
     <script src="scripts/main.js"></script>
   </body>
