--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Start page</title>
+    <title>Portfolio Home</title>
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
     <link rel="stylesheet" href="styles/libs.css" />
@@ -17,7 +17,7 @@
   <body>
     <div class="profile">
       <div class="container">
-        <div class="info-wrap">
+        <div class="profile__info-wrap">
           <div class="profile__my-info">
             <h2 class="profile__name">Анатолий Кузнецов</h2>
             <div class="profile__tagline">Junior Frontend Developer</div>
@@ -36,24 +36,31 @@
               <a
                 href="https://docs.google.com/document/d/1a5ziS6U9SThr71jdknDRDF8wADnPb_fssJVqsIWKW6E/edit?usp=sharing"
                 class="profile__btn-resume btn"
+                target="_blank"
               >
                 View Resume
               </a>
             </div>
             <div class="profile__links">
-              <a href="https://t.me/forestmons" class="profile__telegram link">
+              <a
+                href="https://t.me/forestmons"
+                class="profile__telegram link"
+                target="_blank"
+              >
                 <i class="icon-telegram"></i>
               </a>
 
               <a
                 href="https://www.linkedin.com/in/%D0%B0%D0%BD%D0%B0%D1%82%D0%BE%D0%BB%D0%B8%D0%B9-%D0%BA%D1%83%D0%B7%D0%BD%D0%B5%D1%86%D0%BE%D0%B2-1455741b2/"
                 class="profile__linkedin link"
+                target="_blank"
               >
                 <i class="icon-linkedin"></i>
               </a>
               <a
                 href="https://github.com/Nova5vi7"
                 class="profile__github link"
+                target="_blank"
               >
                 <i class="icon-github"></i>
               </a>
@@ -77,6 +84,7 @@
           <a
             href="https://docs.google.com/document/d/1a5ziS6U9SThr71jdknDRDF8wADnPb_fssJVqsIWKW6E/edit?usp=sharing"
             class="link-skill"
+            target="_blank"
             >резюме</a
           >.
         </div>
@@ -210,13 +218,24 @@
         </h2>
 
         <div class="row my-portfolio__content">
-          <div class="col-md-4 my-portfolio__wrap">
+          <div class="col-xl-4 col-lg-12 my-portfolio__wrap">
             <div class="my-portfolio__img-wrap">
-              <img src="./images/afrian.jpg" alt="" class="image" />
+              <a
+                href="https://nova5vi7.github.io/sites/first/index.html"
+                class="imag-portfolio"
+                target="_blank"
+              >
+                <img src="./images/afrian.jpg" alt="" class="image" />
+              </a>
             </div>
 
             <div class="text-wrap">
-              <h4 class="my-portfolio__work-title">Afrianska</h4>
+              <a
+                href="https://nova5vi7.github.io/sites/first/index.html"
+                target="_blank"
+              >
+                <h4 class="my-portfolio__work-title">Afrianska</h4>
+              </a>
               <p class="my-portfolio__description">
                 Один из моих первых полноценных проектов. Использовал HTML/CSS,
                 Bootstrap, Sass/Scss, Flexbox, Gulp, Jquery.
@@ -227,22 +246,35 @@
               <a
                 href="https://nova5vi7.github.io/sites/first/index.html"
                 class="my-portfolio__btn live"
+                target="_blank"
                 >Live Preview</a
               >
               <a
                 href="https://github.com/Nova5vi7/independently"
                 class="my-portfolio__btn source"
+                target="_blank"
                 >Source Code</a
               >
             </div>
           </div>
 
-          <div class="col-md-4 my-portfolio__wrap">
+          <div class="col-xl-4 col-lg-12 my-portfolio__wrap">
             <div class="my-portfolio__img-wrap">
-              <img src="./images/gravity.png" alt="" class="image" />
+              <a
+                href="https://nova5vi7.github.io/sites/gravity/index.html"
+                class="imag-portfolio"
+                target="_blank"
+              >
+                <img src="./images/gravity.png" alt="" class="image" />
+              </a>
             </div>
             <div class="text-wrap">
-              <h4 class="my-portfolio__work-title">Gravity</h4>
+              <a
+                href="https://nova5vi7.github.io/sites/gravity/index.html"
+                target="_blank"
+              >
+                <h4 class="my-portfolio__work-title">Gravity</h4>
+              </a>
               <p class="my-portfolio__description">
                 Писал кастомные скрипты для меню. Использовал Jquery,
                 Slick-slider, mixitup, Icomoon, HTML/CSS, Bootstrap, Sass/Scss,
@@ -253,23 +285,35 @@
               <a
                 href="https://nova5vi7.github.io/sites/gravity/index.html"
                 class="my-portfolio__btn live"
+                target="_blank"
                 >Live Preview</a
               >
               <a
                 href="https://github.com/Nova5vi7/gravity"
                 class="my-portfolio__btn source"
+                target="_blank"
                 >Source Code</a
               >
             </div>
           </div>
 
-          <div class="col-md-4 my-portfolio__wrap">
+          <div class="col-xl-4 col-lg-12 my-portfolio__wrap">
             <div class="my-portfolio__img-wrap">
-              <img src="./images/hero.png" alt="" class="image" />
+              <a
+                href="https://nova5vi7.github.io/sites/bright_kit/index.html"
+                class="imag-portfolio"
+                target="_blank"
+              >
+                <img src="./images/hero.png" alt="" class="image" />
+              </a>
             </div>
 
             <div class="text-wrap">
-              <h4 class="my-portfolio__work-title">Bright</h4>
+              <a
+                href="https://nova5vi7.github.io/sites/bright_kit/index.html"
+                target="_blank"
+                ><h4 class="my-portfolio__work-title">Bright</h4></a
+              >
               <p class="my-portfolio__description">
                 Проект со сложной и проработаной архетиктурой. Использовал
                 HTML/CSS, Bootstrap, Sass/Scss, Flexbox, Gulp, BEM, Jquery,
@@ -281,11 +325,13 @@
               <a
                 href="https://nova5vi7.github.io/sites/bright_kit/index.html"
                 class="my-portfolio__btn live"
+                target="_blank"
                 >Live Preview</a
               >
               <a
                 href="https://github.com/Nova5vi7/bright_kit"
                 class="my-portfolio__btn source"
+                target="_blank"
                 >Source Code</a
               >
             </div>
