--- a/app/index.html
+++ b/app/index.html
@@ -19,26 +19,24 @@
       <div class="container">
         <div class="profile__info-wrap">
           <div class="profile__my-info">
-            <h2 class="profile__name">Анатолий Кузнецов</h2>
+            <h2 class="profile__name">Кузнецов Анатолий</h2>
             <div class="profile__tagline">Junior Frontend Developer</div>
             <div class="profile__bio">
-              Привет, меня зовут Анатолий. Добро пожаловать на моё портфолио.
-              Здесь вы сможете ознакомится с моими работами и оценить мои
-              умения. Приятного просмотра.
+              Привет, меня зовут Тоха и это моё портфолио.
             </div>
             <div class="profile__button">
               <a
                 href="#portfolio"
                 id="anchor"
                 class="profile__btn-portfolio btn"
-                >View Portfolio</a
+                >Портфолио</a
               >
               <a
                 href="https://docs.google.com/document/d/1a5ziS6U9SThr71jdknDRDF8wADnPb_fssJVqsIWKW6E/edit?usp=sharing"
                 class="profile__btn-resume btn"
                 target="_blank"
               >
-                View Resume
+                Резюме
               </a>
             </div>
             <div class="profile__links">
@@ -47,7 +45,7 @@
                 class="profile__telegram link"
                 target="_blank"
               >
-                <i class="icon-telegram"></i>
+                <i class="flaticon-telegram"></i>
               </a>
 
               <a
