--- a/app/index.html
+++ b/app/index.html
@@ -53,14 +53,21 @@
                 class="profile__linkedin link"
                 target="_blank"
               >
-                <i class="icon-linkedin"></i>
+                <i class="flaticon-linkedin"></i>
               </a>
               <a
                 href="https://github.com/Nova5vi7"
                 class="profile__github link"
                 target="_blank"
               >
-                <i class="icon-github"></i>
+                <i class="flaticon-github"></i>
+              </a>
+              <a
+                href="https://www.instagram.com/nova__vi/"
+                class="profile__instagram link"
+                target="_blank"
+              >
+                <i class="flaticon-instagram"></i>
               </a>
             </div>
           </div>
@@ -73,19 +80,9 @@
     <div class="container">
       <div class="my-skills">
         <h2 class="my-skills__title title">
-          Что я умею
+          Мои скиллы
         </h2>
-        <div class="my-skills__intro">
-          Ниже приведен краткий обзор моих основных технических навыков и
-          технологий, которые я использую. Что бы ознакомится с полным списком
-          моих навыков советую перейти к моему
-          <a
-            href="https://docs.google.com/document/d/1a5ziS6U9SThr71jdknDRDF8wADnPb_fssJVqsIWKW6E/edit?usp=sharing"
-            class="link-skill"
-            target="_blank"
-            >резюме</a
-          >.
-        </div>
+
         <div class="my-skills__info">
           <div class="my-skills__skill">
             <svg
@@ -212,18 +209,18 @@
 
       <div class="my-portfolio" id="portfolio">
         <h2 class="my-portfolio__title title">
-          Моё портфолио
+          Мои работы
         </h2>
 
         <div class="row my-portfolio__content">
-          <div class="col-xl-4 col-lg-12 my-portfolio__wrap">
+          <div class="col-xl-4 col-md-6 my-portfolio__wrap">
             <div class="my-portfolio__img-wrap">
               <a
                 href="https://nova5vi7.github.io/sites/first/index.html"
                 class="imag-portfolio"
                 target="_blank"
               >
-                <img src="./images/afrian.jpg" alt="" class="image" />
+                <img src="./images/afrian.jpg" alt="" class="image afri" />
               </a>
             </div>
 
@@ -232,7 +229,9 @@
                 href="https://nova5vi7.github.io/sites/first/index.html"
                 target="_blank"
               >
-                <h4 class="my-portfolio__work-title">Afrianska</h4>
+                <h4 class="my-portfolio__work-title">
+                  Automation Tool for Home
+                </h4>
               </a>
               <p class="my-portfolio__description">
                 Один из моих первых полноценных проектов. Использовал HTML/CSS,
@@ -245,25 +244,25 @@
                 href="https://nova5vi7.github.io/sites/first/index.html"
                 class="my-portfolio__btn live"
                 target="_blank"
-                >Live Preview</a
+                >Код</a
               >
               <a
                 href="https://github.com/Nova5vi7/independently"
                 class="my-portfolio__btn source"
                 target="_blank"
-                >Source Code</a
+                >Демо</a
               >
             </div>
           </div>
 
-          <div class="col-xl-4 col-lg-12 my-portfolio__wrap">
+          <div class="col-xl-4 col-md-6 my-portfolio__wrap">
             <div class="my-portfolio__img-wrap">
               <a
                 href="https://nova5vi7.github.io/sites/gravity/index.html"
                 class="imag-portfolio"
                 target="_blank"
               >
-                <img src="./images/gravity.png" alt="" class="image" />
+                <img src="./images/gravity.png" alt="" class="image gravity" />
               </a>
             </div>
             <div class="text-wrap">
@@ -284,18 +283,18 @@
                 href="https://nova5vi7.github.io/sites/gravity/index.html"
                 class="my-portfolio__btn live"
                 target="_blank"
-                >Live Preview</a
+                >Код</a
               >
               <a
                 href="https://github.com/Nova5vi7/gravity"
                 class="my-portfolio__btn source"
                 target="_blank"
-                >Source Code</a
+                >Демо</a
               >
             </div>
           </div>
 
-          <div class="col-xl-4 col-lg-12 my-portfolio__wrap">
+          <div class="col-xl-4 col-md-6 my-portfolio__wrap">
             <div class="my-portfolio__img-wrap">
               <a
                 href="https://nova5vi7.github.io/sites/bright_kit/index.html"
@@ -324,13 +323,13 @@
                 href="https://nova5vi7.github.io/sites/bright_kit/index.html"
                 class="my-portfolio__btn live"
                 target="_blank"
-                >Live Preview</a
+                >Код</a
               >
               <a
                 href="https://github.com/Nova5vi7/bright_kit"
                 class="my-portfolio__btn source"
                 target="_blank"
-                >Source Code</a
+                >Демо</a
               >
             </div>
           </div>
@@ -341,24 +340,7 @@
     <footer class="end-portfolio">
       <div class="container">
         <div class="end-portfolio__copyrite">
-          Спасибо за просмотр
-          <svg
-            class="svg-inline--fa fa-heart fa-w-16 icon-footer"
-            aria-hidden="true"
-            focusable="false"
-            data-prefix="fas"
-            data-icon="heart"
-            role="img"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 512 512"
-            data-fa-i2svg=""
-          >
-            <path
-              fill="currentColor"
-              d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
-            ></path>
-          </svg>
-          для меня это очень важно !
+          Спасибо за просмотр. Это очень важно для меня!
         </div>
       </div>
     </footer>
