--- a/app/index.html
+++ b/app/index.html
@@ -340,7 +340,8 @@
     <footer class="end-portfolio">
       <div class="container">
         <div class="end-portfolio__copyrite">
-          Спасибо за просмотр. Это очень важно для меня!
+          <span class="end-portfolio__title">Спасибо за просмотр.</span>
+          <span class="end-portfolio__title">Это очень важно для меня!</span>
         </div>
       </div>
     </footer>
