fixed styles icon

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
             <h2 class="profile__name">Кузнецов Анатолий</h2>
             <div class="profile__tagline">Junior Frontend Developer</div>
             <div class="profile__bio">
-              Привет, меня зовут Тоха и это моё портфолио.
+              Всем привет, меня зовут Тоха и это моё портфолио.
             </div>
             <div class="profile__button">
               <a
@@ -340,8 +340,7 @@
     <footer class="end-portfolio">
       <div class="container">
         <div class="end-portfolio__copyrite">
-          <span class="end-portfolio__title">Спасибо за просмотр.</span>
-          <span class="end-portfolio__title">Это очень важно для меня!</span>
+          <span class="end-portfolio__title">Спасибо за просмотр:)</span>
         </div>
       </div>
     </footer>
