fixed telegram link

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
                 >Портфолио</a
               >
               <a
-                href="https://docs.google.com/document/d/1a5ziS6U9SThr71jdknDRDF8wADnPb_fssJVqsIWKW6E/edit?usp=sharing"
+                href="./CV/Resume.pdf"
                 class="profile__btn-resume btn"
                 target="_blank"
               >
@@ -41,7 +41,7 @@
             </div>
             <div class="profile__links">
               <a
-                href="https://t.me/forestmons"
+                href="https://t.me/forest_toha"
                 class="profile__telegram link"
                 target="_blank"
               >
@@ -161,13 +161,13 @@
 
             <div class="my-portfolio__links">
               <a
-                href="https://nova5vi7.github.io/sites/first/index.html"
+                href="https://github.com/Nova5vi7/independently"
                 class="my-portfolio__btn live"
                 target="_blank"
                 >Код</a
               >
               <a
-                href="https://github.com/Nova5vi7/independently"
+                href="https://nova5vi7.github.io/sites/first/index.html"
                 class="my-portfolio__btn source"
                 target="_blank"
                 >Демо</a
@@ -200,13 +200,13 @@
             </div>
             <div class="my-portfolio__links">
               <a
-                href="https://nova5vi7.github.io/sites/gravity/index.html"
+                href="https://github.com/Nova5vi7/gravity"
                 class="my-portfolio__btn live"
                 target="_blank"
                 >Код</a
               >
               <a
-                href="https://github.com/Nova5vi7/gravity"
+                href="https://nova5vi7.github.io/sites/gravity/index.html"
                 class="my-portfolio__btn source"
                 target="_blank"
                 >Демо</a
@@ -240,13 +240,13 @@
 
             <div class="my-portfolio__links">
               <a
-                href="https://nova5vi7.github.io/sites/bright_kit/index.html"
+                href="https://github.com/Nova5vi7/bright_kit"
                 class="my-portfolio__btn live"
                 target="_blank"
                 >Код</a
               >
               <a
-                href="https://github.com/Nova5vi7/bright_kit"
+                href="https://nova5vi7.github.io/sites/bright_kit/index.html"
                 class="my-portfolio__btn source"
                 target="_blank"
                 >Демо</a
